force-app/main/default/objects/Community_Theme__c/Community_Theme__c.object-meta.xml
<CustomObject>
    <description>Will be used to roll up Tags to a Theme.  Depending on attributes of the Theme, related Tags may be used in the Community Registration process or available to associate to Resources.</description>
    <label>Community Theme</label>
    <nameField>
        <label>Community Theme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Themes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>