force-app/main/default/objects/Community_Theme__c/fields/Icon_Color__c.field-meta.xml
<CustomField>
    <fullName>Icon_Color__c</fullName>
    <description>Choose from any of Font Awesome&#39;s Icon coloring classes</description>
    <inlineHelpText>Choose from any of Font Awesome&#39;s Icon coloring classes</inlineHelpText>
    <label>Icon Color</label>
    <length>150</length>
    <type>Text</type>
</CustomField>