force-app/main/default/objects/Community_Theme__c/fields/Theme_Type__c.field-meta.xml
<CustomField>
    <fullName>Theme_Type__c</fullName>
    <description>determines if the theme will be available for resources, interests or system</description>
    <label>Theme Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>