force-app/main/default/objects/Community_Theme__c/fields/Theme_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Theme_Unique_ID__c</fullName>
    <description>This is a unique, external ID field used for the Theme object.  This field can be referenced when importing Tags.</description>
    <externalId>true</externalId>
    <label>Theme Unique ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>