force-app/main/default/objects/Community_Theme__c/listViews/All_Themes.listView-meta.xml
<ListView>
    <fullName>All_Themes</fullName>
    <columns>NAME</columns>
    <columns>Theme_Type__c</columns>
    <columns>Icon_Color__c</columns>
    <columns>Icon_Style__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Themes</label>
    <language>en_US</language>
</ListView>