force-app/main/default/objects/Community_Theme__c/listViews/Resource_Themes.listView-meta.xml
<ListView>
    <fullName>Resource_Themes</fullName>
    <columns>NAME</columns>
    <columns>Icon_Color__c</columns>
    <columns>Icon_Style__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Theme_Type__c</field>
        <operation>equals</operation>
        <value>Resource</value>
    </filters>
    <label>Resource Themes</label>
    <language>en_US</language>
</ListView>